discussion/kv_engine/132233/132233_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-40365: Allows ById scan to resume from last key after a pause

A scan can pause and resume, in the case of this MB it was the backfill
buffer being full that triggered a pause. Prior to this fix, when the
scan resumes in the ById case the scan is started again, this can just
hit the same condition and the backfill just loops through pause/resume
indefinitely.

This commit adds a lastReadKey member to the ById context which is set
to the last read key when pause occurs, now the scan can be resumed
from the position in the by-id index it got to.

Change-Id: Idc4f1dd51af0c23cc957ae7e3cbabadf6e149a7d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2020-07-09 14:13:39.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2020-07-09 14:14:03.000000000
Message: 
Patch Set 1:

Looking into unit testing, but comments welcome
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-07-09 14:55:58.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29096/ : FAILURE

Failure of GoogleTest "FullAndValueEvictionOnReplicaAndPending/RollbackTest.RollbackAfterMutation/magma_full_eviction_pending":

<pre>
[ RUN      ] FullAndValueEvictionOnReplicaAndPending/RollbackTest.RollbackAfterMutation/magma_full_eviction_pending
..\kv_engine\engines\ep\tests\module_tests\evp_store_rollback_test.cc(236): error: Expected equality of these values:
  FlushResult(MoreAvailable::No, 2, WakeCkptRemover::No)
    Which is: moreAvailable:{false} numFlushed:{2} wakeupCkptRemover:{false}
  getEPBucket().flushVBucket(vbid)
    Which is: moreAvailable:{false} numFlushed:{2} wakeupCkptRemover:{true}
[  FAILED  ] FullAndValueEvictionOnReplicaAndPending/RollbackTest.RollbackAfterMutation/magma_full_eviction_pending, where GetParam() = ("magma", "full_eviction", "pending") (17073 ms)
FullAndValueEvictionOnReplicaAndPending/RollbackTest.RollbackAfterMutation/magma_full_eviction_pending
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29096/ )

Failure of a CTest test 232/395 Test #177: ep-engine_ep_unit_tests.FullAndValueEvictionOnReplicaAndPending/RollbackTest .................................................. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29096/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3276/ : FAILURE

<p>clang-tidy suggested the following changes:
<pre>

cat &lt;&lt;&quot;EOF&quot; | patch -p1
diff --git a/engines/ep/src/kvstore.h b/engines/ep/src/kvstore.h
index 298465e..b9fc9a2 100644
--- a/engines/ep/src/kvstore.h
+++ b/engines/ep/src/kvstore.h
@@ -32,6 +32,7 @@
 #include &lt;map&gt;
 #include &lt;string&gt;
 #include &lt;unordered_map&gt;
+#include &lt;utility&gt;
 #include &lt;vector&gt;
 
 /* Forward declarations */
@@ -306,8 +307,8 @@ public:
  *    {&quot;b&quot;, &quot;ba&quot;, &quot;bb&quot;}
  */
 struct ByIdRange {
-    ByIdRange(const DiskDocKey&amp; start, const DiskDocKey&amp; end)
-        : startKey(start), endKey(end) {
+    ByIdRange(DiskDocKey  start, DiskDocKey  end)
+        : startKey(std::move(start)), endKey(std::move(end)) {
     }
     DiskDocKey startKey;
     DiskDocKey endKey;
EOF

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3276/ )

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kvstore.h:309:15: warning: pass by value and use std::move [modernize-pass-by-value]
    ByIdRange(const DiskDocKey& start, const DiskDocKey& end)
              ^~~~~~~~~~~~~~~~~
              DiskDocKey 
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kvstore.h:35:1: note: FIX-IT applied suggested code changes
#include <vector>
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kvstore.h:309:15: note: FIX-IT applied suggested code changes
    ByIdRange(const DiskDocKey& start, const DiskDocKey& end)
              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kvstore.h:310:20: note: FIX-IT applied suggested code changes
        : startKey(start), endKey(end) {
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kvstore.h:310:25: note: FIX-IT applied suggested code changes
        : startKey(start), endKey(end) {
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kvstore.h:309:40: warning: pass by value and use std::move [modernize-pass-by-value]
    ByIdRange(const DiskDocKey& start, const DiskDocKey& end)
                                       ^~~~~~~~~~~~~~~~~
                                       DiskDocKey 
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kvstore.h:309:40: note: FIX-IT applied suggested code changes
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kvstore.h:310:35: note: FIX-IT applied suggested code changes
        : startKey(start), endKey(end) {
                                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kvstore.h:310:38: note: FIX-IT applied suggested code changes
        : startKey(start), endKey(end) {
                                     ^
clang-tidy suggested the following changes:

cat &lt;&lt;&quot;EOF&quot; | patch -p1
diff --git a/engines/ep/src/kvstore.h b/engines/ep/src/kvstore.h
index 298465e..b9fc9a2 100644
--- a/engines/ep/src/kvstore.h
+++ b/engines/ep/src/kvstore.h
@@ -32,6 +32,7 @@
 #include &lt;map&gt;
 #include &lt;string&gt;
 #include &lt;unordered_map&gt;
+#include &lt;utility&gt;
 #include &lt;vector&gt;
 
 /* Forward declarations */
@@ -306,8 +307,8 @@ public:
  *    {&quot;b&quot;, &quot;ba&quot;, &quot;bb&quot;}
  */
 struct ByIdRange {
-    ByIdRange(const DiskDocKey&amp; start, const DiskDocKey&amp; end)
-        : startKey(start), endKey(end) {
+    ByIdRange(DiskDocKey  start, DiskDocKey  end)
+        : startKey(std::move(start)), endKey(std::move(end)) {
     }
     DiskDocKey startKey;
     DiskDocKey endKey;
EOF

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3276/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4819/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1783/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25100/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3741/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4635/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4708/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12532/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2020-07-10 09:10:16.000000000
Message: 
Patch Set 1: Code-Review-1

Don't we also need an implementation for magma-kvstore?
----------------------------------------------------------------------------------------------------------------------
